[package]
name = "iza"
version = "0.1.0"
authors = ["Keishi Kawada <megumish@exploitouri.st>"]
edition = "2018"

[[bin]]
name = "iza"
path = "src/bin/main.rs"

[dependencies]
futures-preview = "=0.3.0-alpha.18"
uuid = { version = "0.7.4", features = ["v4"] }
serde = { version = "1.0.99", features = ["derive"] }
toml = "0.5.3"
