[package]
name = "iza"
version = "0.1.0"
authors = ["Keishi Kawada <megumish@exploitouri.st>"]
edition = "2018"

[[bin]]
name = "iza"
path = "src/bin/main.rs"
required-features = ["exec"]

[dependencies]
futures-preview = "=0.3.0-alpha.18"
serde = { version = "1.0.99", features = ["derive"] }
failure = "0.1.5"
clap = { version = "2.33.0", optional = true }
lazy_static = { version = "1.3.0", optional = true }
serde_yaml = "0.8.9"
blake2 = "0.8.0"
serde_json = "1.0.40"
hex = "0.3.2"
uuid = { version = "0.7.4", features = ["v4"] }

[features]
exec = ["clap", "lazy_static"]
