[package]
name = "kotonoha"
version = "0.1.0"
authors = ["Keishi Kawada <megumish@exploitouri.st>"]
edition = "2018"

[dependencies]
futures-preview = "=0.3.0-alpha.18"
chrono = "=0.4.8"
uuid = { version = "=0.7.4", features = ["v4"]}

[features]
default = ["log", "daemon"]

log = []

daemon = ["log"]
